src/app/notification/menu/common/notification-item.scss
.notifications {
  margin-bottom: 0;

  &__item {
    padding: 0;
    position: relative;
    display: block;
    margin-bottom: 0px;
    background-color: #f5f5f5;
    border-top: 1px solid #dddddd;

    &:hover {
      background-color: #eeeeee;
    }
  }

  &__item--danger &__link-content--bold {
    color: #d03732;
  }

  &__item--success &__link-content--bold {
    color: #5cb85c;
  }

  &__item--none {
    padding: 10px;
  }

  &__link {
    color: #333333;
    padding: 10px;
    display: flex;
    flex-direction: row;
    align-items: center;
    cursor: pointer;
   
    &-content {
      margin-left: 5px;

      &--bold {
        font-weight: 700;
      }
    }
  }
  

  &__link-avatar {
    width: 35px;
    height: 35px;
    display: block;
  }

  &__see-all-btn {
    padding: 10px;
    display: block;
    cursor: pointer;
    color: #ffffff;

    &:hover {
      color: #ffffff;
    }
  }

  &__footer {
    display: block;
    font-size: 1.2rem;
    padding: 0;
    white-space: nowrap;
    background-color: #5cb85c;
    
    &:hover {
      background-color: #4cae4c;
    }
  }
}

